changed folder names

--- a/infinite-zoom/index.html
+++ b/infinite-zoom/index.html
@@ -10,8 +10,10 @@
     <div class="content_container">
         <section class="about_section">
             <div class="about_info">
-                <h1>About Me</h1>
-                <p>Brief summary about yourself.</p>
+                <h1>Hi, my name is Maxwell</h1>
+                <p>This is my personal website coded in HTML, CSS, and JavaScript. I am an 
+                    aspiring software developer with a keen attitude towards learning anything and everything.
+                </p>
             </div>
         </section>
         <section class="projects_section">
